<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:background="#E6E6E6"
    >

    <TextView
        android:id="@id/Titulo"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:background="#424242"
        android:gravity="center"
        android:text="@string/ConfiguraTitle"
        android:textSize="25sp"
        android:textColor="#FFF" />

    <ImageView
        android:id="@id/lineabar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nada"
        android:scaleType="fitXY"
        android:src="@drawable/linea" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        tools:ignore="ScrollViewCount,UselessParent">
        <LinearLayout android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical"
            android:background="#E6E6E6"
            >
            <CheckBox
                android:id="@id/cTosta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ConfiguraTosta"
                android:layout_marginLeft="10dp"/>

            <CheckBox
                android:id="@id/cBarra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ConfiguraBarra"
                android:layout_marginLeft="10dp"/>

            <CheckBox
                android:id="@id/cVibrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ConfiguraVibrar"
                android:layout_marginLeft="10dp"/>

            <CheckBox
                android:id="@id/cBoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ConfigurarBoot"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@id/textoTemporizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textoConfiguracionTemporizador"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"/>

            <Spinner
                android:id="@id/temporizador"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fitsSystemWindows="false"
                android:visibility="visible"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <CheckBox
                android:id="@id/cSonido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ConfiguraSonido"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@id/cLabelTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfiguraLabelTipo"
                android:maxLength="100"
                android:numeric="integer"
                android:layout_marginLeft="30dp"
                tools:ignore="TextViewEdits"/>

            <Spinner
                android:id="@id/cTipoSonido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="false"
                android:visibility="visible"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <TextView
                android:id="@id/cLabelTipo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfiguraLabelTipo2"
                android:layout_marginLeft="30dp"/>
            <SeekBar
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/bVolumen"
                android:max="100"
                android:progress="20"
                android:indeterminate="false"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
