<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.endikaiglesias.alertacobertura.AboutActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="top|center"
android:orientation="vertical"
android:background="#E6E6E6"
    >

<TextView
    android:id="@+id/Titulo"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_marginTop="0dp"
    android:background="#424242"
    android:gravity="center"
    android:text="@string/title_activity_about"
    android:textSize="25sp"
    android:textColor="#FFF" />

<ImageView
    android:id="@+id/lineabar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/nada"
    android:scaleType="fitXY"
    android:src="@drawable/linea" />

<TextView
    android:id="@+id/descripcion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/descripcion"
    android:textColor="#000"
    android:textSize="15sp"
    android:background="#E6E6E6"
    android:padding="15dp"/>

</LinearLayout>
